# lit-mlflow

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  config.yml
.github/workflows/: build.yaml  copier.yaml  docs.yaml  pre-commit.yaml  release.yaml
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/notebooks/: index.md  the-boring-model.ipynb
notebooks/: example.ipynb
src/lit_mlflow/: __init__.py  callback.py  cli.py  logger.py
src/lit_mlflow/utils/: dbx.py
tests/unit/: test_base.py
