[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "lit-mlflow"
requires-python = ">=3.8"

# TODO: https://github.com/python-poetry/poetry/issues/3332
[tool.poetry]
name = "lit-mlflow"
version = "0.0.0"
description = "An improved Lightning mlflow logger"
authors = ["twsl <45483159+twsl@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/twsl/lit-mlflow"
homepage = "https://twsl.github.io/lit-mlflow/"
packages = [ { include = "lit_mlflow", from = "src" } ]
keywords = []


[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.14.2"
lightning = "^2.3.2"

[tool.poetry.group.dbx.dependencies]
databricks-cli = "^0.18.0"
pyspark = "^3.5.1"
databricks-connect = "^15.3.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
safety = "^3.0.1"
bandit = "^1.7.8"
pre-commit = "^3.6.2"
ipykernel = "^6.22.0"
ipywidgets = "^8.0.6"
ipython = "^8.23.0"
jupytext = " ^1.16.1"
nbconvert = "^7.16.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.12.0"
pre-commit = "^3.6.2"
pytest-cases = "^3.8.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.30"
mkdocs-git-revision-date-localized-plugin = "^1.2.4"
mkdocs-awesome-pages-plugin = "^2.9.3"
mkdocs-git-authors-plugin = "^0.9.0"
mkapi = "^2.1.0"
pygments = "^2.17.2"
mkdocs-jupyter = "^0.24.7"

[tool.poetry.group.debug]
optional = true

[tool.poetry.group.debug.dependencies]
ipdb = "^0.13.9"
line_profiler = "^4.1.2"

[tool.poetry.scripts]
lit-mlflow = "lit_mlflow.cli:main"

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "semver"
pattern = "default-unprefixed"

[tool.poetry-dynamic-versioning.substitution]
folders = [
  { path = "src/lit_mlflow" }
]

[tool.poetry-dynamic-versioning.files."src/lit_mlflow/__about__.py"]
persistent-substitution = false
initial-content = """
# file generated by poetry dynamic versioning during poetry build/install
# don't change, don't track in version control
__version__ = "0.0.0"
__version_tuple__ = (0, 0, 0)
"""

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--doctest-glob='test_*.md'"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug:",
    "if debug:",
    "if DEBUG:",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if False:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 120  # Must agree with Black
lint.select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # Error
    "F",  # pyflakes
    "I",  # isort
    "ISC", # flake8-implicit-str-concat
    "N",  # pep8-naming
    "PGH",  # pygrep-hooks
    "PTH", # flake8-use-pathlib
    "Q",  # flake8-quotes
    "S",  # bandit
    "SIM",  # flake8-simplify
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # Warning
    "YTT", # flake8-2020
]
exclude = [
    "migrations",
    "__pycache__",
    "env",
    ".env",
    "venv",
    ".venv",
]
lint.ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D401",
    "E402",
    "E501",
    "F401",
    "TRY002", # Allow default exceptions
    "TRY003",  # Avoid specifying messages outside exception class; overly strict, especially for ValueError
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "chr",
    "typer.Argument",
    "typer.Option",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 120
max-line-length = 120

[tool.ruff.lint.per-file-ignores]
"test*/**/*.py" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "S101",  # use of "assert"
    "S102",  # use of "exec"
    "S106",  # possible hardcoded password.
    "PGH001",  # use of "eval"
]

[tool.ruff.lint.pep8-naming]
staticmethod-decorators = [
    "pydantic.validator",
    "pydantic.root_validator",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "Linux"
include = ["src"]
reportMissingImports = true
reportMissingTypeStubs = false
